Sun Feb 22 04:21:43 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * examples/PICML/AntiSPAM/descriptors/e2e/e2e-template-assembly1.unique:
        * examples/PICML/AntiSPAM/descriptors/e2e/e2e-template-assembly2.unique:

          . Regenerated the unique deployments so that instances that
            receive births are not collocated.

Sun Feb 22 03:17:11 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/antispam/Deployment.h:
        * cuts/utils/antispam/Deployment.inl:
        * cuts/utils/antispam/Deployment.cpp:
        * cuts/utils/antispam/Host.h:
        * cuts/utils/antispam/Host.inl:
        * cuts/utils/antispam/Host.cpp:

          . Committing missing files.

Sun Feb 22 02:45:25 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * examples/PICML/AntiSPAM/descriptors/e2e/generate-DnC.sh:
        * examples/PICML/AntiSPAM/descriptors/e2e/generate-and-run-test-all.sh:
        * examples/PICML/AntiSPAM/descriptors/e2e/run-test-all.sh:
        * examples/PICML/AntiSPAM/descriptors/e2e/run-test.sh:

          . Scripts for generating all the deployments, and running the
            tests in ISISlab.

Sun Feb 22 01:24:48 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * examples/PICML/AntiSPAM/AntiSPAM.xme:
        * examples/PICML/AntiSPAM/descriptors/e2e:
        * examples/PICML/AntiSPAM/descriptors/e2e/e2e-template-assembly1.assembly:
        * examples/PICML/AntiSPAM/descriptors/e2e/e2e-template-assembly1.cdp:
        * examples/PICML/AntiSPAM/descriptors/e2e/e2e-template-assembly1.config:
        * examples/PICML/AntiSPAM/descriptors/e2e/e2e-template-assembly1.deployment:
        * examples/PICML/AntiSPAM/descriptors/e2e/e2e-template-assembly1.unique:
        * examples/PICML/AntiSPAM/descriptors/e2e/e2e-template-assembly2.assembly:
        * examples/PICML/AntiSPAM/descriptors/e2e/e2e-template-assembly2.cdp: